fix: menu z-index

--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 999;
   background: #fff;
   padding-bottom: 5px;
   border-top: 1px solid #b7b7b7;
@@ -26,6 +27,7 @@
   top: 80px;
   right: 0;
   left: 0;
+  z-index: 999;
   background: $white;
   a {
     display: inline-block;
